--- a/app/index.html
+++ b/app/index.html
@@ -171,9 +171,367 @@
       </div>
     </div>
   </section>
+  
+  <section class="project">
+    <div class="container">
+      <h4 class="project__title title">
+        Наши Проекты
+      </h4>
+      <div class="project__items">
+        <div class="project__item">
+          <div class="project__item-img" style="background-image: url(images/project-1.jpg);">
+            <div class="project__item-inner">
+              <a class="project__item-info" href="#">
+                <img src="images/info.svg" alt="">
+              </a>
+              <a class="project__item-search" href="#">
+                <img src="images/search.svg" alt="">
+              </a>
+            </div>
+          </div>
+          <a href="" class="project__item-link" href="#">
+            Lalique бутик
+          </a>
+        </div>
+        <div class="project__item">
+          <div class="project__item-img" style="background-image: url(images/project-2.jpg);">
+            <div class="project__item-inner">
+              <a class="project__item-info" href="#">
+                <img src="images/info.svg" alt="">
+              </a>
+              <a class="project__item-search" href="#">
+                <img src="images/search.svg" alt="">
+              </a>
+            </div>
+          </div>
+          <a href="" class="project__item-link" href="#">
+            Строительство домов
+          </a>
+        </div>
+        <div class="project__item">
+          <div class="project__item-img" style="background-image: url(images/project-3.jpg);">
+            <div class="project__item-inner">
+              <a class="project__item-info" href="#">
+                <img src="images/info.svg" alt="">
+              </a>
+              <a class="project__item-search" href="#">
+                <img src="images/search.svg" alt="">
+              </a>
+            </div>
+          </div>
+          <a href="" class="project__item-link" href="#">
+            Кофейня
+          </a>
+        </div>
+        <div class="project__item">
+          <div class="project__item-img" style="background-image: url(images/project-4.jpg);">
+            <div class="project__item-inner">
+              <a class="project__item-info" href="#">
+                <img src="images/info.svg" alt="">
+              </a>
+              <a class="project__item-search" href="#">
+                <img src="images/search.svg" alt="">
+              </a>
+            </div>
+          </div>
+          <a href="" class="project__item-link" href="#">
+            Уникальные туры
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <section class="team">
+    <div class="container">
+      <div class="team__inner">
+        <img class="team__images" src="images/team.jpg" alt="" >
+        <div class="team__content">
+          <h4 class="team__title title">
+            Команда
+          </h4>
+          <div class="team__text">
+            <p>
+            Наша команда - это наша самая большая ценность. 
+            Мы трудились, чтобы собрать группу  экспертов,
+            чьи навыки дополняют друг друга. 
+            </p>
+            <p>
+            У членов нашей команды разные истории, но мыразделяем общую страсть к идеалу. Мы верим,чтобы оставаться
+            профессионалом, нужно развиваться, 
+            поэтому мы постоянно ищем способы, как статьлучше в том, что мы делаем.
+            </p>
+          </div>
+          <button class="team__btn">
+            Смотреть видео
+          </button>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <section class="news">
+    <div class="container">
+      <h4 class="news__title title">
+        Последние Новости
+      </h4>
+       <div class="news__inner">
+          <div class="news__item">
+            <div class="news__item-img">
+              <div class="news__img-wrap">
+                <img class="news__img" src="images/news-1.jpg" alt="">
+              </div>
+              <a class="news__item-info" href="#">
+                <img src="images/news-info.svg" alt="">
+              </a>
+              <p class="news__text">           
+                  3Д в брендинге            
+              </p>
+            </div>
+          </div>
+          <div class="news__item">
+            <div class="news__item-img">
+              <div class="news__img-wrap">
+                <img class="news__img" src="images/news-2.jpg" alt="">
+              </div>
+              <a class="news__item-info" href="#">
+                <img src="images/news-info.svg" alt="">
+              </a>
+              <p class="news__text">          
+                  3Д в брендинге           
+              </p>
+            </div>
+          </div>
+          <div class="news__item">
+            <div class="news__item-img">
+              <div class="news__img-wrap">
+                <img class="news__img" src="images/news-3.jpg" alt="">
+              </div>
+              <a class="news__item-info" href="#">
+                <img src="images/news-info.svg" alt="">
+              </a>
+              <p class="news__text">        
+                  3Д в брендинге          
+              </p>
+            </div>
+          </div>
+          <div class="news__item">
+            <div class="news__item-img">
+              <div class="news__img-wrap">
+                <img class="news__img" src="images/news-4.jpg" alt="">
+              </div>
+              <a class="news__item-info" href="#">
+                <img src="images/news-info.svg" alt="">
+              </a>
+              <p class="news__text">        
+                  3Д в брендинге             
+              </p>
+            </div>
+          </div>
+          <div class="news__item">
+            <div class="news__item-img">
+              <div class="news__img-wrap">
+                <img class="news__img" src="images/news-5.jpg" alt="">
+              </div>
+              <a class="news__item-info" href="#">
+                <img src="images/news-info.svg" alt="">
+              </a>
+              <p class="news__text">        
+                  3Д в брендинге             
+              </p>
+            </div>
+          </div>
+          <div class="news__item">
+            <div class="news__item-img">
+              <div class="news__img-wrap">
+                <img class="news__img" src="images/news-6.jpg" alt="">
+              </div>
+              <a class="news__item-info" href="#">
+                <img src="images/news-info.svg" alt="">
+              </a>
+              <p class="news__text">           
+                  3Д в брендинге          
+              </p>
+            </div>
+          </div>
+          <div class="news__item">
+            <div class="news__item-img">
+              <div class="news__img-wrap">
+                <img class="news__img" src="images/news-7.jpg" alt="">
+              </div>
+              <a class="news__item-info" href="#">
+                <img src="images/news-info.svg" alt="">
+              </a>
+              <p class="news__text">            
+                  3Д в брендинге             
+              </p>
+            </div>
+          </div>
+          <div class="news__item">
+            <div class="news__item-img">
+              <div class="news__img-wrap">
+                <img class="news__img" src="images/news-8.jpg" alt="">
+              </div>
+              <a class="news__item-info" href="#">
+                <img src="images/news-info.svg" alt="">
+              </a>
+              <p class="news__text">         
+                  3Д в брендинге            
+              </p>
+            </div>
+          </div>  
+       </div>
+    </div>
+  </section>
 
+  <section class="marketing">
+    <div class="container">
+      <div class="marketing__slider">
+        <div class="marketing__slider-inner">
+          <div class="marketing__icon">
+            <img class="marketing__svg" src="images/marketing.svg" alt="">
+          </div>
+          <p class="marketing__text">
+            Если нужно создавать либо повышать имидж компании,<br>
+            то <span>диджитал-маркетинг</span> является наиболее подходящим
+          </p>
+          <h4 class="marketing__name">
+            - Маргарита Акулич
+          </h4>
+        </div>
+        <div class="marketing__slider-inner">
+          <div class="marketing__icon">
+            <img class="marketing__svg" src="images/marketing.svg" alt="">
+          </div>
+          <p class="marketing__text">
+            Если нужно создавать либо повышать имидж компании,<br>
+            то <span>диджитал-маркетинг</span> является наиболее подходящим
+          </p>
+          <h4 class="marketing__name">
+            - Маргарита Акулич
+          </h4>
+        </div>
+        <div class="marketing__slider-inner">
+          <div class="marketing__icon">
+            <img class="marketing__svg" src="images/marketing.svg" alt="">
+          </div>
+          <p class="marketing__text">
+            Если нужно создавать либо повышать имидж компании,<br> 
+            то <span>диджитал-маркетинг</span> является наиболее подходящим
+          </p>
+          <h4 class="marketing__name">
+            - Маргарита Акулич
+          </h4>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  <section class="footer">
+    <div class="container">
+      <div class="footer__inner">
+        <div class="footer__logo">
+          <img src="images/logo.png" alt="footer-logo">
+        </div>
+        <div class="footer__title">
+          <div class="footer__title-text">
+            <p>
+              Мы хотели бы услышать всё о вашем проекте.
+              Свяжись с нами.
+            </p>
+          </div> 
+        </div>
+        <div class="footer__social">
+          <a class="footer__icon" href="#">
+            <img class="footer__icon-social" src="images/footer-icon-1.svg" alt="icon">
+          </a>
+          <a class="footer__icon" href="#">
+            <img class="footer__icon-social" src="images/footer-icon-2.svg" alt="icon">
+          </a>
+          <a class="footer__icon" href="#">
+            <img class="footer__icon-social" src="images/footer-icon-3.svg" alt="icon">
+          </a>
+          <a class="footer__icon" href="#">
+            <img class="footer__icon-social" src="images/footer-icon-4.svg" alt="icon">
+          </a>
+        </div>
+        <nav class="footer__menu">
+          <div class="footer__box">
+            <ul class="footer__cont-inner">
+              <li class="footer__cont-li" >
+                <a class="footer__link" href="#">КОНТАКТЫ</a>
+              </li>
+              <li class="footer__cont-li" >
+                <a class="footer__link" href="#">+80 555 55 66</a>
+              </li>
+              <li class="footer__cont-li" >
+                <a class="footer__link" href="#">digi@gmail.com</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__box">
+            <ul class="footer__cont-inner">
+              <li class="footer__cont-li" >
+                <a class="footer__link" href="">АДРЕС</a>
+              </li>
+              <li class="footer__cont-li" >
+                <a class="footer__link" href="">Пр. Науки 107</a>
+              </li>
+              <li class="footer__cont-li" >
+                <a class="footer__link" href="">Kиев / Украина</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__box">
+            <ul class="footer__cont-inner">
+              <li class="footer__cont-li" >
+                <a class="footer__link" href="">ПОМОЩЬ</a>
+              </li>
+              <li class="footer__cont-li" >
+                <a class="footer__link" href="">Как с нами связаться?</a>
+              </li>
+              <li class="footer__cont-li" >
+                <a class="footer__link" href="">Что такое диджитал?</a>
+              </li>
+              <li class="footer__cont-li" >
+                <a class="footer__link" href="">Стоимость услуг</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__box">
+            <ul class="footer__cont-inner">
+              <li class="footer__cont-li" >
+                <a class="footer__link" href="">МЕНЮ</a>
+              </li>
+              <li class="footer__cont-li" >
+                <a class="footer__link" href="">Наши проекты</a>
+              </li>
+              <li class="footer__cont-li" >
+                <a class="footer__link" href="">Команда</a>
+              </li>
+              <li class="footer__cont-li" >
+                <a class="footer__link" href="">Блог</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </div>
+    <div class="footer__arrow">
+      <div class="footer__arrow-up">
+        <div class="footer__arrow-text">
+          <p>
+            Вверх
+          </p>
+        </div>
+        <div class="footer__arrow-link">
+          <a href="">
+            <img class="footer__arrow-img" src="images/arrow-up.svg" alt="">
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
 
